--- a/package.json
+++ b/package.json
@@ -12,18 +12,35 @@
   "author": "ludovic ekalle",
   "license": "ISC",
   "dependencies": {
+    "@azure/data-tables": "^13.2.2",
+    "@azure/identity": "^4.0.1",
+    "@azure/storage-blob": "^12.17.0",
     "@parcel/css": "^1.14.0",
+    "@types/localforage": "^0.0.34",
+    "@types/match-sorter": "^6.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/sort-by": "^1.2.3",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.2",
     "react-dom": "^18.2.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "uglify-js": "^3.17.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/moment": "^2.13.0",
+    "@types/react-big-calendar": "^1.8.9",
     "autoprefixer": "^10.4.18",
     "babel-core": "^4.7.16",
     "babel-loader": "^9.1.3",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^0.0.0",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "mini-css-extract-plugin": "^2.8.1",
@@ -32,6 +49,7 @@
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "webpack": "^5.90.3",
